feat: more example content, some better styling

--- a/content/recipe_Spaghetti_Bolognese.html
+++ b/content/recipe_Spaghetti_Bolognese.html
@@ -33,6 +33,7 @@
 </section>
 
 <section class="recipe--instructions">
+    <h2>Instructions</h2>
     <ol>
         <li>Chop the onion, garlic, carrot, and celery.</li>
         <li>Heat the olive oil in a pan and add the onion, garlic, carrot, and celery. Cook for 5min.</li>
